err/kikola.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/kikola'...
Listing './lib/python3.5/site-packages/kikola/contrib'...
Listing './lib/python3.5/site-packages/kikola/contrib/basicsearch'...
Compiling './lib/python3.5/site-packages/kikola/contrib/basicsearch/forms.py'...
***   File "./lib/python3.5/site-packages/kikola/contrib/basicsearch/forms.py", line 20
    raise TypeError, 'Please, supply `request` keyword argument first.'
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kikola/core'...
Listing './lib/python3.5/site-packages/kikola/db'...
Compiling './lib/python3.5/site-packages/kikola/db/fields.py'...
***   File "./lib/python3.5/site-packages/kikola/db/fields.py", line 92
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kikola/forms'...
Compiling './lib/python3.5/site-packages/kikola/forms/superforms.py'...
***   File "./lib/python3.5/site-packages/kikola/forms/superforms.py", line 228
    raise AttributeError, 'cleaned_data'
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kikola/forms/widgets.py'...
***   File "./lib/python3.5/site-packages/kikola/forms/widgets.py", line 77
    raise TypeError, \
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kikola/middleware'...
Listing './lib/python3.5/site-packages/kikola/shortcuts'...
Listing './lib/python3.5/site-packages/kikola/templatetags'...
Listing './lib/python3.5/site-packages/kikola/utils'...
Listing './lib/python3.5/site-packages/kikola-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
